fix cta button wrap and header image size

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -27,4 +27,6 @@
    display: flex;
    gap: 1rem;
    margin-top: 1rem;
+
+   white-space: nowrap;
 }
