--- a/sass/sections/_header.scss
+++ b/sass/sections/_header.scss
@@ -19,6 +19,7 @@ $text-lg: 3rem;
       padding: 1rem 0 0 5vw;
       display: flex;
       flex-direction: column;
+
       &-cta {
          margin: 2rem 0;
          flex: 1;
@@ -38,7 +39,7 @@ $text-lg: 3rem;
       gap: 2rem;
       margin-top: 2rem;
 
-      @media (min-width: vars.$screen-md) {
+      @media (min-width: vars.$screen-lg) {
          display: flex;
       }
 
@@ -65,17 +66,21 @@ $text-lg: 3rem;
       &-blue {
          background-color: #8cddff;
          width: 40%;
-         @media (min-width: vars.$screen-md) {
-            width: 70%;
-         }
+         // @media (min-width: vars.$screen-md) {
+         //    width: 70%;
+         // }
       }
       img {
          position: absolute;
          width: 100%;
-         height: 70%;
+         height: 85%;
          object-fit: cover;
          transform: translateY(-50%);
          top: 50%;
+
+         @media (min-width: vars.$screen-lg) {
+            height: 70%;
+         }
       }
    }
 }
